--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -29,10 +29,9 @@ jobs:
     - name: Get Parent Branch
       id: get-parent-branch
       shell: pwsh
-      run: 
+      run: |
         git fetch
         $createNewElementTags = (git rev-list --count ${{ github.event.repository.default_branch }}..HEAD) -gt 0
-
         Write-Output "Create New Element Tags: $createNewElementTags"
         "createNewElementTags=$createNewElementTags" >> $env:GITHUB_OUTPUT
 
