--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -30,7 +30,9 @@ jobs:
       id: get-parent-branch
       shell: pwsh
       run: |
-        git fetch
+        git fetch -v
+        git checkout main
+        git checkout ${{ github.ref_name }}
         $createNewElementTags = (git rev-list --count ${{ github.event.repository.default_branch }}..HEAD) -gt 0
         Write-Output "Create New Element Tags: $createNewElementTags"
         "createNewElementTags=$createNewElementTags" >> $env:GITHUB_OUTPUT
