--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -180,8 +180,8 @@ jobs:
       run: |
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git config user.name "github-actions[bot]"
-        git tag -f v${{ steps.gitversion.outputs.newVersion }}
-        git push origin -f v${{ steps.gitversion.outputs.newVersion }}
+        git tag -f ${{ matrix.element }}-v${{ steps.gitversion.outputs.newVersion }}
+        git push origin -f ${{ matrix.element }}-v${{ steps.gitversion.outputs.newVersion }}
 
 
   CreateRelease:
